@@ -1,7 +1,7 @@
 master_doc = 'pam_python'
 project = u'pam_python'
 copyright = u'2010,2014,2016,2019, Russell Stuart'
-version = '1.0.7'
-release = '1.0.7'
+version = '1.1.0'
+release = '1.1.0'
 extensions = ['sphinx.ext.intersphinx']
-intersphinx_mapping = {'python': ('http://docs.python.org/2.7', None)}
+intersphinx_mapping = {'python': ('http://docs.python.org/3.6', None)}
