@@ -6,7 +6,7 @@ DEFAULT_USER	= "nobody"
 def pam_sm_authenticate(pamh, flags, argv):
   try:
     user = pamh.get_user(None)
-  except pamh.exception, e:
+  except pamh.exception as e:
     return e.pam_result
   if user == None:
     pamh.user = DEFAULT_USER
